--- a/src/app/pages/blog-detail/blog-detail.html
+++ b/src/app/pages/blog-detail/blog-detail.html
@@ -38,7 +38,7 @@
                             alt="{{ blog.title }}" />
                     </div>
 
-                    <div class="blog-card-dtl">
+                    <div class="blog-card-dtl dtl-main">
                         <!-- Date -->
                         <div class="blog-date d-flex align-items-center">
                             <img [src]="'assets/images/date.svg'" class="img-fluid me-2" />
