--- a/src/app/pages/hospital-detail/hospital-detail.css
+++ b/src/app/pages/hospital-detail/hospital-detail.css
@@ -53,3 +53,11 @@
 {
     display: block;
 }
+.card-location p
+{
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
