--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -104,6 +104,11 @@
                 Online Consultation
               </a>
             </li>
+            <li>
+              <a class="dropdown-item" routerLink="/ayushman-treatment" routerLinkActive="active">
+                Ayushman Treatment Plan
+              </a>
+            </li>
           </ul>
         </li>
 
