--- a/src/app/pages/attractions-detail/attractions-detail.html
+++ b/src/app/pages/attractions-detail/attractions-detail.html
@@ -25,29 +25,31 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-4">
-          <div class="detail-doctors recent-post">
-              <div class="dtl-doctor-head d-flex align-items-center justify-content-between">
-                  <h4>Recent Event</h4>
-              </div>
-              
-              <!-- Dynamic recent offers -->
-              <div class="dtl-doctor-list d-flex align-items-center" *ngFor="let recentOffer of recentOffers">
-                  <div class="dtl-doctor-img">
-                      <img [src]="getOfferImageUrl(recentOffer)" class="img-fluid">
-                  </div>
-                  <div class="dtl-doctor-info">
-                      <p>
-                          <a [routerLink]="['/attractions-detail', recentOffer.id]" class="text-decoration-none">
-                              {{ recentOffer.name }}
-                          </a>
-                      </p>
-                  </div>
-              </div>
-              
-                            <!-- Fallback message if no recent offers -->
-              <div class="dtl-doctor-info" *ngIf="recentOffers.length === 0">
-                  <p class="text-muted">No recent offers available</p>
-              </div>
+          <div class="blog-category-main">
+            <div class="detail-doctors recent-post">
+                <div class="dtl-doctor-head d-flex align-items-center justify-content-between">
+                    <h4>Recent Event</h4>
+                </div>
+                
+                <!-- Dynamic recent offers -->
+                <div class="dtl-doctor-list d-flex align-items-center" *ngFor="let recentOffer of recentOffers">
+                    <div class="dtl-doctor-img">
+                        <img [src]="getOfferImageUrl(recentOffer)" class="img-fluid">
+                    </div>
+                    <div class="dtl-doctor-info">
+                        <p>
+                            <a [routerLink]="['/attractions-detail', recentOffer.id]" class="text-decoration-none">
+                                {{ recentOffer.name }}
+                            </a>
+                        </p>
+                    </div>
+                </div>
+                
+                              <!-- Fallback message if no recent offers -->
+                <div class="dtl-doctor-info" *ngIf="recentOffers.length === 0">
+                    <p class="text-muted">No recent offers available</p>
+                </div>
+            </div>
           </div>
       </div>
         <div class="col-lg-8">
@@ -84,7 +86,7 @@
             </div>
   
             <!-- Offer Info -->
-            <div class="blog-card-dtl">
+            <div class="blog-card-dtl dtl-main">
               <h4>{{ offer.name }}</h4>
   
               <div class="offer-meta">
